# tekno

./: CMakeLists.txt  package.xml  selam.txt
ilk_urdf_denemesi/: CMakeLists.txt  package.xml
ilk_urdf_denemesi/config/: joint_names_ilk_urdf_denemesi.yaml
ilk_urdf_denemesi/launch/: display.launch  gazebo.launch
ilk_urdf_denemesi/meshes/: arac_govdesi.STL  arka_aks.STL  arka_sag_teker.STL  arka_sol_teker.STL  on_aks.STL  on_sag_teker.STL  on_sol_teker.STL
ilk_urdf_denemesi/urdf/: ilk_urdf_denemesi.csv  ilk_urdf_denemesi.urdf
launch/: move_base.launch  navigate.launch  robot.launch  rviz.launch
param/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rviz/: ek.rviz  laserScan.rviz  last.rviz  mesel.rviz  robot.rviz
src/: first_move.cpp  ir_handler.py  merhaba.txt  transform_data_publisher.cpp
urdf/: robot_core.urdf  robot_core.urdf.xacro  robot_core.xacro  robot_core_urdf.xacro  whole.urdf.xacro  whole_urdf.xacro
worlds/: base.world  base2.world
